# ChangeLog for app-admin/clsync
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  16 Sep 2013; Andrew Savchenko <bircoph@gmail.com> clsync-9999.ebuild,
  +files/clsync-0.1.confd, +files/clsync-0.1.initd,  +files/clsync.conf,
  files/clsync.confd, files/clsync.initd:
  Add config file support. For v0.1 use old init.d/conf.d because
  v0.1 doesn't support config files.

  13 Sep 2013; Andrew Savchenko <bircoph@gmail.com> files/clsync.initd:
  Remove non-standard retry approach, this bug is fixed now.
  Add syslog support.

  09 Sep 2013; Andrew Savchenko <bircoph@gmail.com> clsync-9999.ebuild:
  Force 0700 permissions or /etc/clsync. License update. Conf.d
  recommendations update.

*clsync-0.1 (07 Sep 2013)

  07 Sep 2013; Andrew Savchenko <bircoph@gmail.com> +clsync-0.1.ebuild,
  clsync-9999.ebuild, +files/clsync.confd, +files/clsync.initd, metadata.xml:
 Version bump for 0.1 release. Add capabilities support. Install
 init script and conf file. Keep config directory: rules are
 supposed to be here. Add rsync hinting information.

  26 Aug 2013; Andrew Savchenko <bircoph@gmail.com> clsync-9999.ebuild,
  metadata.xml:
  Add mhash and clustering support.

  21 Aug 2013; Andrew Savchenko <bircoph@gmail.com> clsync-9999.ebuild:
  Fix typo if docs path.

  21 Aug 2013; Andrew Savchenko <bircoph@gmail.com> clsync-9999.ebuild,
  metadata.xml:
  Use new features of clsync build system. Utilize all flags.

  21 Aug 2013; Andrew Savchenko <bircoph@gmail.com> -clsync-0.0.ebuild,
  clsync-9999.ebuild:
  Base autotools version. Installation and flags control bugs are
  still to be fixed in clsync itself.

  20 Aug 2013; Andrew Savchenko <bircoph@gmail.com> -clsync-0.0.ebuild,
  clsync-9999.ebuild:
  Fix html and examples installation. Remove buggy v0.0.

  20 Aug 2013; Andrew Savchenko <bircoph@gmail.com> ChangeLog:
  Initial ebuild.
