@@ -11,8 +11,8 @@
 #
 #watch-dir       = /what/dir/to/sync
 #sync-handler    = /etc/clsync/action.sh
-#rules-path      = /etc/clsync/rules
-#dir-lists       = /tmp/clsync
+#rules-dir       = /etc/clsync/rules
+#lists-dir       = /tmp/clsync
 #pthread         = 1
 #delay-sync      = 5
 #delay-collect   = 5
