@@ -9,5 +9,6 @@
 #CLSYNC_OPTS=""
 
 # Example of direct rsync usage:
-#CLSYNC_OPTS="--dir-lists /tmp/clsync -RR -p /source/dir
-#/usr/bin/rsync /etc/clsync/rules /destination/dir"
+#CLSYNC_OPTS="--lists-dir /tmp/clsync --mode rsyncshell
+#--watch-dir /source/dir --sync-handler /usr/bin/rsync 
+#--rules-file /etc/clsync/rules --distination-dir /destination/dir"
